create UsersItems and UserItem components with its styles

--- a/src/components/UsersFilter/UsersFilter.module.scss
+++ b/src/components/UsersFilter/UsersFilter.module.scss
@@ -1,8 +1,4 @@
-.usersFilter {
-    color: blanchedalmond;
-    font-size: 20px;
-}
-.usersFilterForm {
+.UsersFilterForm {
     display: flex;
     justify-content: space-around;
     input {
